<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Neil Borle, Mitchell Home, Bronte Lee, Aaron
  Padlesky, Eddie Santos
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
      http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License. 
-->

<resources>

    <string name="app_name">TaskSource</string>
    <string name="title_task_detail">Task Detail</string>
    <string name="title_task_list">All Tasks</string>
    <string name="no_task_message">No task to display!</string>

    <!-- Task lists -->
    <string name="user_no_tasks">Your Tasks</string>
    <string name="local_tasks">Local Tasks</string>
    <string name="global_tasks">Global Tasks</string>

    <!-- Task displaying fields -->
    <string name="task_summary">Summary</string>
    <string name="task_description">Description</string>
    <string name="task_requirements">Media Type Requirements</string>
    <string name="view_reports">View Reports</string>
    <string name="fulfill">Fulfill</string>
    <string name="menu_define_task">Add new task</string>
    <string name="menu_short_define_task">New</string>
    <string name="menu_view_reports">View Reports</string>
    <string name="menu_fulfill_task">Fulfill Task</string>
    <string name="menu_fulfill_task_short">Fulfill</string>
    <string name="menu_edit_task">Edit Task</string>
    <string name="menu_edit_task_short">Edit</string>
    <string name="menu_delete_task">Delete Task</string>
    <string name="menu_delete_task_short">Delete</string>
    <string name="task_no_description">No description</string>
    <string name="task_has_no_reports">No reports for this task</string>

    <!-- Defining Tasks -->
    <string name="task_request">Request</string>
    <string name="task_text">Text</string>
    <string name="task_photo">Photo</string>
    <string name="task_audio">Audio</string>
    <string name="task_sharing">Sharing Setting</string>
    <string name="task_local">LOCAL</string>
    <string name="task_global">GLOBAL</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_define_task">Create a new task</string>
    <string name="task_sharing_description">Please select the visibility of 
	    	your task. If your task is global, other people can view your tasks
	    	and can help you fulfill them. If your task is local, only you will
	    	be able to view and fulfill it. </string>
    <string name="title_activity_task_define_fragment">Create a new task</string>
    <string name="error_missing_summary">Please fill out a summary</string>
    <string name="error_zero_requests">Please add a request</string>
    <string name="task_create_success">Task Created</string>

    <!-- Editing & Deleting a Task -->
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="edit_task_done">Update</string>
    <string name="delete_task_dialog">Warning! If you delete this task, you can 
        	not get it back!</string>
    <string name="task_update_success">Task updated</string>
    <string name="cancel">Cancel</string>
    <string name="task_delete_success">Task Deleted</string>

    <!-- Fulfilling a task -->
    <string name="title_activity_fulfill_task">Fulfill Task</string>
    <string name="task_take_photo">Take A Photo</string>
    <string name="task_attached_photos">Attached Photos</string>
    <string name="task_record_audio">Record An Audio Clip</string>
    <string name="task_report_to">Send Report To</string>
    <string name="send_to_owner">Owner</string>
    <string name="send_to_server">World</string>
    <string name="do_not_send">Don\'t Send</string>
    <string name="fulfill_success">Report saved</string>
    <string name="error_zero_responses">Must fulfill at least one response</string>

    <!-- Report List for a Task -->
    <string name="title_activity_report_list">View Reports</string>

    <!-- Viewing a report -->
    <string name="title_activity_report_detail">View Report</string>
    <string name="task_report_header">This Report Contains:</string>
    <string name="text_response_info">Text Response:</string>
    <string name="photo_response_info">Photo Response:</string>
    <string name="timestamp">Completed On:</string>

    <!-- Misc -->

    <string name="list_seperator">,\u0020</string>

    <!-- Testing strings: throw away later? -->
    <string name="TEST_LONG_SUMMARY">THIS IS A VERY LONG SUMMARY THAT 
        	SHOULD HOPEFULLY GET CUT OFF OR SOMETHING LIKE THAT. 
        	LOTADS!</string>
    <string name="TEST_SHORT_SUMMARY">much shorter summary</string>
    <string name="TEST_REPORT_SUMMARY">Text, 20 photos, 10 audio clips.</string>
    <string name="TEST_REPORT_SHORT_SUMMARY">Text</string>
    <string name="TEST_REPORT_TIMESTAMP">March 05, 2011</string>
    <string name="done">Done</string>
    <string name="task_list_status_description">Fulfilled</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="menu_random_task">Random task</string>
    <string name="title_activity_record_audio">RecordAudio</string>

</resources>