<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entry_detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".gui.TaskDetailFragment" >

    <!-- Display the summary, description and media type of the requirements -->

    <TextView
        android:id="@+id/task_summary"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/task_description"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/task_requires"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_requirements" />

    <!-- Display the media requests as a list of text, not as buttons (as originally designed)? -->

    <TextView
        android:id="@+id/task_requests"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Want these two buttons side by side. TODO: make neater? -->

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_view_reports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_reports" />

        <Button
            android:id="@+id/button_fulfill_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fulfill" />
    </TableRow>

</LinearLayout>